vendor/formats-der-v0.7.8/tls_codec/derive/tests/attributes/test_that_duplicate_skip_attributes_dont_compile.stderr
error: Attribute `skip` specified more than once
 --> tests/attributes/test_that_duplicate_skip_attributes_dont_compile.rs:3:10
  |
3 | #[derive(TlsDeserialize, TlsSerialize, TlsSize)]
  |          ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TlsDeserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Attribute `skip` specified more than once
 --> tests/attributes/test_that_duplicate_skip_attributes_dont_compile.rs:3:26
  |
3 | #[derive(TlsDeserialize, TlsSerialize, TlsSize)]
  |                          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TlsSerialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Attribute `skip` specified more than once
 --> tests/attributes/test_that_duplicate_skip_attributes_dont_compile.rs:3:40
  |
3 | #[derive(TlsDeserialize, TlsSerialize, TlsSize)]
  |                                        ^^^^^^^
  |
  = note: this error originates in the derive macro `TlsSize` (in Nightly builds, run with -Z macro-backtrace for more info)
