vendor/formats-der-v0.7.8/tls_codec/derive/tests/attributes/test_that_duplicate_skip_attributes_dont_compile.rs
use tls_codec_derive::{TlsDeserialize, TlsSerialize, TlsSize};

#[derive(TlsDeserialize, TlsSerialize, TlsSize)]
struct StructWithDuplicateSkip {
    #[tls_codec(skip, skip)]
    a: u8,
}

fn main() {}
